Fix emote spacing temporarily

--- a/client/app/styles/pages/_chat.scss
+++ b/client/app/styles/pages/_chat.scss
@@ -1,3 +1,8 @@
+.emoteContainer {
+  position: relative;
+  width: 25px;
+  margin-right: 28px;
+}
 .chatMessageText .twitch {
   position:absolute;
   top:-6px;
